# spec-template

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  plan.md
template/: CLAUDE.md
template/docs/: architecture.md
template/scripts/: check_docs.py
tests/: test_complete_task.py  test_get_phase_tasks.py  test_renumber_tasks.py
